Added very basic route converted HTML into Handlebars
The homepage and link to adoption are working. Converted the html files
into handlesbars files, so we have more control over them and will be
able to interact better with the back end. Some how (probably me) the
main files got copied into the config folder. Removed them, so config.
now only holds the config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": "codex21!",
-    "database": "FMN_DB",
+    "username": "CodingBootCamp",
+    "password": "",
+    "database": "FMN_db",
     "host": "localhost",
     "dialect": "mysql"
   },
