--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~2.2.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.1",
     "handlebars": "^4.0.5",
     "handlebars-helper-css": "^0.1.0",
     "jade": "~1.11.0",
