--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jade": "~1.11.0",
     "method-override": "^2.3.6",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3",
     "serve-favicon": "~2.3.0"
